Add GET /menus/branch/{branchId} tests
